# minecraft-render-py

./: .gitignore  .npmignore  LICENSE.md  README.md  hatch_build.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: bump-version.yml  ci.yml
lib/: index.ts
lib/dataset/: Loader.ts  RenderClass.ts  ResourcePackLoader.ts  types.ts  utils.ts
lib/utils/: apng.ts  logger.ts  math.ts  resource.ts  types.ts  vector-math.ts
src/: index.ts
src/dataset/: Loader.ts  RenderClass.ts  ResourcePackLoader.ts  utils.ts
src/minecraft_render/: __init__.py  module.py
src/minecraft_render/dataset/: Loader.py  RenderClass.py  utils.py
src/tests/: download.test.ts
src/utils/: logger.ts
